Added prefixes for API's: private and public, depending by visibility. Also fixed a bug about not sending token via email to user when wants to reset passowrd.